--- a/Patcher/cool.ini
+++ b/Patcher/cool.ini
@@ -3,3 +3,7 @@ AssetOverrides =
 
 ReadModernClientCookieJar = true
 RobloSecurityCookie = 
+
+[Rendering]
+ExperimentalFpsUnlock = false
+DesiredFps = 60
