--- a/Patcher/Patcher.vcxproj.filters
+++ b/Patcher/Patcher.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="..\ThirdParty\inih\ini.h">
       <Filter>ThirdParty\inih</Filter>
     </ClInclude>
+    <ClInclude Include="StudioHooks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -124,6 +127,9 @@
     </ClCompile>
     <ClCompile Include="..\ThirdParty\inih\ini.c">
       <Filter>ThirdParty\inih</Filter>
+    </ClCompile>
+    <ClCompile Include="StudioHooks.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
